--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.2
       - run: npm ci
+      - run: npm test
+      - run: npm run build
+
+      
 
       
       
