--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.2.2
-      - uses: actions/setup-node@v3.9.0
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v
         with:
           node-version: 18.17.0
       - run: npm ci
