--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '.nvmrc'
+          node-version: 18.17.0
           cache: npm
       - run: npm ci
       - run: npm test
